# sherlock

./: Cargo.toml
settings/: settings.json
src/: count_errors.rs  hints.rs  main.rs  matrix.rs  settings.rs  sherlock.rs
