[package]
name = "sherlock"
version = "0.1.0"
edition = "2021"

#[workspace]
#resolver = "2" # Important! wgpu/Bevy needs this!
#
## Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1
#
## Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
#
[dependencies]
bevy = { version = "0.11.3", features = [] }
rand = { version = "0.8.5", features = [] }